# DoraROSBridge

./: .gitignore  AUDIO_STREAMING.md  Cargo.toml  Dockerfile.ros1  Dockerfile.ros2  README.md  Taskfile.yml  dataflow.audio.yml  dataflow.image.yml  dataflow.yml  install-task.sh  package.json
common-audio-playback/: Cargo.toml
common-audio-playback/src/: lib.rs
custom_msgs/: CMakeLists.txt  package.xml
custom_msgs/action/: AudioProcessing.action
custom_msgs/msg/: CustomAudio.msg  RobotStatus.msg
custom_msgs/srv/: ProcessAudio.srv
docs/: AUDIO_STREAMING.md  CUSTOM_MESSAGES.md  METRICS.md
dora-audio-sink/: README.md
dora-ros2-bridge/: Cargo.toml  debug_test.rs
dora-ros2-bridge/msg-gen/: Cargo.toml
dora-ros2-bridge/msg-gen/src/: lib.rs
dora-ros2-bridge/msg-gen/src/parser/: package.rs
dora-ros2-bridge/python/src/: lib.rs
dora-ros2-bridge/src/: lib.rs
gstreamer-audio-receiver/: Cargo.toml
gstreamer-audio-receiver/src/: main.rs
nodes/audio/: audio_debug.json  dataflow.audio.yml
nodes/audio/common-audio-playback/: README.md
nodes/audio/dora-audio-sink/: Cargo.toml
nodes/audio/dora-audio-sink/src/: main.rs
nodes/audio/gstreamer-audio-receiver/src/: main.rs
nodes/audio/ros2-audio-publisher/: Cargo.toml
nodes/audio/ros2-audio-publisher/src/: main.rs
nodes/custom/: dataflow.custom.yml
nodes/custom/custom-message-test/: Cargo.toml
nodes/custom/custom-message-test/src/: main.rs
nodes/image/: dataflow.image.yml
nodes/image/ros1-image-source/src/: main.rs
nodes/image/ros2-image-sink/src/: main.rs
nodes/tts/: dataflow.tts.yml
nodes/tts/ros1-tts-sink/src/: main.rs
nodes/tts/ros2-tts-source/src/: main.rs
python_helpers/: README.md  deploy_and_run_audio_sender.sh  deploy_and_run_remote.sh  tts_bridge.py
ros1-source/: Cargo.toml
ros1-tts-sink/: Cargo.toml
ros2-audio-publisher/src/: main.rs
ros2-image-sink/: Cargo.toml
ros2-image-sink/src/: main.rs
ros2-tts-source/: Cargo.toml
ros2-tts-source/src/: main.rs
scripts/: cleanup-metrics.sh  create-release.sh  run-with-viewer.sh  setup.sh  start-all.sh  start-tts.sh  stop-metrics.sh  test-audio.sh  test-metrics.sh  test-release-docker.sh  test-setup.sh
scripts/grafana/dashboards/: dora-metrics.json
scripts/grafana/datasources/: influxdb.yml
