[workspace]
members = [
    "ros1-image-source",
    "ros2-image-sink",
    "ros1-tts-sink",
    "ros2-tts-source",
    "gstreamer-audio-receiver",
    "ros2-audio-publisher",
    "dora-audio-sink",
    "common-audio-playback"
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
rust-version = "1.70"

[workspace.dependencies]
dora-node-api = "0.3.0"
dora-ros2-bridge = { path = "/home/daniel/Projects/dora/libraries/extensions/ros2-bridge" }
