[workspace]
members = [
    "nodes/image/ros1-image-source",
    "nodes/image/ros2-image-sink",
    "nodes/tts/ros1-tts-sink",
    "nodes/tts/ros2-tts-source",
    "nodes/audio/gstreamer-audio-receiver",
    "nodes/audio/ros2-audio-publisher",
    "nodes/audio/dora-audio-sink",
    "nodes/audio/common-audio-playback",
    "nodes/custom/custom-message-test",
    "dora-ros2-bridge",
    "dora-ros2-bridge/msg-gen"
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
rust-version = "1.70"

[workspace.dependencies]
dora-node-api = "0.3.0"
dora-ros2-bridge = { path = "./dora-ros2-bridge" }
