[package]
name = "ros1-image-source"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dora-node-api = { workspace = true, features = ["tracing"] }
eyre = "0.6.8"
futures = "0.3.21"
tokio = { version = "1.24.2", features = ["rt", "macros"] }
rosrust = "0.9.8"
rosrust_msg = "0.1.8"
