[package]
name = "ros2-image-sink"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
publish = false

[dependencies]
dora-node-api = { workspace = true, features = ["tracing"] }
eyre = "0.6.8"
futures = { version = "0.3.21", features = ["thread-pool"] }
futures-timer = "3.0.3"
tokio = { version = "1.24.2", features = ["rt", "macros"] }
dora-ros2-bridge = { workspace = true }
serde_json = "1.0.99"
