[package]
name = "dora-audio-sink"
version.workspace = true
edition.workspace = true
rust-version.workspace = true

[dependencies]
dora-node-api.workspace = true
eyre = "0.6"
futures = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
cpal = "0.15"
ctrlc = "3.4"
common-audio-playback = { path = "../common-audio-playback" }
