[package]
name = "custom-message-test"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
publish = false

[dependencies]
dora-node-api = { workspace = true, features = ["tracing"] }
dora-ros2-bridge = { workspace = true }
eyre = "0.6.8"
futures = { version = "0.3.21", features = ["thread-pool"] }
tokio = { version = "1.24.2", features = ["rt", "macros"] }
